# securedash-esp32

./: .gitignore  Cargo.toml  LICENSE  README.md  diagram.json  partitions.csv  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh
src/: api.rs  config.rs  debug.rs  main.rs  storage.rs  usb.rs
src/api/: client.rs  processor.rs  websocket.rs  websocket_session.rs
src/benchmarks/: storage.rs
src/storage/: sd_card.rs  spiflash.rs  ssd.rs
src/usb/: msc_device.rs
src/wifi/: session.rs
