[package]
name = "securedash"
version = "0.1.0"
authors = ["Fang-Pen Lin <hello@fangpenlin.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "securedash"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.50", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embedded-svc = "0.28.1"
embassy-sync = "0.6.1"
anyhow = "1.0.95"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_tinyusb", version = "96cbb5b308f92d2493a0c714f097dcfc51add807", git = "https://github.com/LaunchPlatform/esp-usb.git", path = "device/esp_tinyusb" }

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_websocket_client", version = "1.3.0" }

[build-dependencies]
embuild = "0.33"

[patch.crates-io]
embuild = { git = "https://github.com/esp-rs/embuild" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" }
